<resources>
    <string name="app_name">Got It!</string>
    <string name="action_settings">Settings</string>
    <string name="action_send">Send</string>
    <string name="undo">UNDO</string>
    <string name="retry">RETRY</string>
    <string name="cant_undo">Can\'t undo action</string>
    <string name="got_it">GOT IT</string>

    <!-- Strings related to main activity -->
    <string name="post_added">Checked in</string>
    <string name="cant_update_posts_list" type="id">Can\'t update posts</string>

    <!-- Strings related to main activity's navigation drawer -->
    <string name="title_activity_main">Feed</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="navigation_drawer_feed">Feed</string>
    <string name="navigation_drawer_check_in">Check in</string>
    <string name="navigation_drawer_feedback">Feedback</string>
    <string name="navigation_drawer_people">People</string>
    <string name="navigation_drawer_preferences">Preferences</string>
    <string name="navigation_drawer_preferences_heading">Preferences</string>
    <string name="navigation_drawer_people_heading">People</string>


    <!-- Strings related to login -->
    <string name="title_activity_login">Sign in</string>
    <string name="log_in_with">Log in with</string>
    <string name="sign_in_with_google">GOOGLE</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="not_registered">Not registered?</string>
    <string name="action_sign_up">Sign up</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_short_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_contacts_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="permission_internet_rationale">Internet access is required for contacting server</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Check in -->
    <string name="title_checkin_activity">Check in</string>
    <string name="title_activity_my_posts">My posts</string>
    <string name="check_in_how_you_feel">How do you feel?</string>
    <string name="check_in_feeling_good">Good</string>
    <string name="check_in_feeling_okay">Okay</string>
    <string name="check_in_feeling_bad">Bad</string>
    <string name="check_in_blood_sugar">Blood sugar</string>
    <string name="check_in_administered_insulin">Administered insulin?</string>
    <string name="check_in_optional_questions">Optional questions</string>
    <string name="check_in_there_is_no_questions">There is no questions</string>
    <string name="check_in_share_with_friends">Share with friends?</string>
    <string name="check_in_no_data">No data was input, please enter any data and try again</string>
    <string name="cant_add_post">Can\'t make a check in. Please try again</string>
    <string name="check_in_cant_add_permanent_question">Can\'t add question for future use</string>

    <string name="check_in_add_new_question">Add new question</string>
    <string name="check_in_question">Question</string>
    <string name="check_in_answer">Answer</string>
    <string name="check_in_add_default">Show in future posts</string>
    <string name="check_in_add_question">Add question</string>

    <!-- Strings related to Post -->
    <string name="post_no_questions">Optional questions not filled</string>
    <string name="post_feeling_good">I am feeling good!</string>
    <string name="post_feeling_okay">I am feeling okay</string>
    <string name="post_feeling_bad">I am feeling bad</string>

    <!-- Strings related to People -->
    <string name="people_follow_updates">Follow?</string>
    <string name="people_follow_updates_checkbox">Follow updates</string>
    <string name="people_what_to_share">What to share?</string>
    <string name="people_feeling">Feeling</string>
    <string name="people_insulin">Insulin</string>
    <string name="people_blood_sugar">Blood sugar</string>
    <string name="people_questions">Optional questions</string>

    <!-- Strings related to SignUpActivity -->
    <string name="title_activity_signup">Sign up</string>
    <string name="signup_enter_you_details">Enter your details below</string>
    <string name="signup_username">Email address</string>
    <string name="signup_password">Password</string>
    <string name="signup_first_name">First name (optional)</string>
    <string name="signup_last_name">Last name (optional)</string>
    <string name="signup_birthday">Birthday (optional)</string>
    <string name="signup_choose_date">Choose date</string>
    <string name="signup_medical_record_number">Medical record number (optional)</string>
    <string name="signup_i_am_a_patient">I am a patient</string>
    <string name="signup_sign_up">Sign up</string>

    <string name="signup_toast_username_not_blank">Username should not be blank</string>
    <string name="signup_toast_password_too_short">Password is too short. Please enter 6 characters at least</string>
    <string name="signup_toast_username_busy">This username is busy, please try another one</string>
    <string name="signup_toast_incorrect_input">Input is incorrect, please correct and try again</string>
    <string name="signup_toast_cant_signup">Error signing up, please check inputs and try again later</string>
    <string name="signup_toast_no_access">Can\'t access remote server, please check internet connection</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_people">People</string>

    <string name="title_activity_splash">Got it!</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="app_title">Got it!</string>
    <string name="app_title_line2">Diabetes management</string>
    <string name="splash_logging_in">Logging you in...</string>
    <string name="splash_loading_posts_and_people">Loading posts and people...</string>

    <!-- Notifications strings -->
    <string name="notification_title">Got It! Check in now</string>
    <string name="notification_check_in_text">Tap this notification to check in now</string>


</resources>
