<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/black"
            android:text="@string/check_in_blood_sugar" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/bloodSugarEditText" />

    </LinearLayout>

    <Switch
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/black"
        android:layout_marginTop="@dimen/check_in_question_top_margin"
        android:text="@string/check_in_administered_insulin"
        android:id="@+id/checkInAdministeredInsulinSwitch" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/black"
        android:layout_marginTop="@dimen/check_in_question_top_margin"
        android:text="@string/check_in_how_you_feel"
        android:id="@+id/textView4" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/black"
            android:text="@string/check_in_feeling_good"
            android:id="@+id/checkInGoodRadio" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/black"
            android:text="@string/check_in_feeling_okay"
            android:id="@+id/checkInOkayRadio" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/black"
            android:text="@string/check_in_feeling_bad"
            android:id="@+id/checkInBadRadio" />
    </RadioGroup>

    <Switch
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/black"
        android:layout_marginTop="@dimen/check_in_question_top_margin"
        android:text="@string/check_in_share_with_friends"
        android:checked="true"
        android:id="@+id/checkInIsSharedSwitch" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/black"
        android:layout_marginTop="@dimen/check_in_question_top_margin"
        android:text="@string/check_in_optional_questions"
        android:id="@+id/textView3" />
</LinearLayout>