<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="3dp"
    android:layout_marginBottom="3dp"
    android:id="@+id/people_list_item_parent_layout">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">
        <ImageView
            android:layout_width="@dimen/people_userpic_size"
            android:layout_height="@dimen/people_userpic_size"
            android:layout_marginRight="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="6dp"
            android:src="@drawable/ic_user_default"
            android:id="@+id/people_list_item_userpic"/>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/people_userpic_size"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="Name LastName"
                android:gravity="center_vertical"
                android:id="@+id/people_list_item_name"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/people_list_item_settings_layout"
                android:visibility="visible">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/people_follow_updates"/>
                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/people_follow_updates_checkbox"
                    android:id="@+id/post_list_item_follow"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:layout_marginTop="10dp"
                    android:text="@string/people_what_to_share"/>
                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/people_feeling"
                    android:id="@+id/post_list_item_share_feeling"
                    />
                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/people_blood_sugar"
                    android:id="@+id/post_list_item_share_blood_sugar"
                    />
                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/people_insulin"
                    android:id="@+id/post_list_item_share_insulin"/>
                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/people_questions"
                    android:id="@+id/post_list_item_share_questions"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <Button
                        style="?android:attr/buttonStyleSmall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/people_list_item_done_button"
                        android:drawableStart="@drawable/ic_done_black_24dp"
                        android:drawableLeft="@drawable/ic_done_black_24dp"
                        />
                    <Button
                        style="?android:attr/buttonStyleSmall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/people_list_item_delete_button"
                        android:drawableStart="@drawable/ic_delete_black_24dp"
                        android:drawableLeft="@drawable/ic_delete_black_24dp"
                        />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>