<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:background="#fff"
    tools:context="pro.khodoian.gotit.view.SplashActivity">

    <!-- The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc. -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">
        <TextView android:id="@+id/fullscreen_content" android:layout_width="match_parent"
            android:layout_height="wrap_content" android:keepScreenOn="true" android:textColor="#333"
            android:textStyle="bold" android:textSize="70sp" android:gravity="center"
            android:text="@string/app_title" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="#333"
            android:textSize="25sp"
            android:text="@string/app_title_line2"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="#333"
            android:textSize="20sp"
            android:layout_marginTop="60dp"
            android:id="@+id/splash_status_text_field"
            android:text="@string/splash_logging_in"/>
    </LinearLayout>

    <!-- This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows. -->

</FrameLayout>
